--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,9 +1,9 @@
-<div class='student container'>
+<div class='student-container'>
   <p><%= @question.capitalize %></p>
 <p>-<i>You</i></p>
 </div>
 
-<div class='coach container'>
+<div class='coach-container'>
   <p><%= @answer %></p>
   <p>-<i>Your coach</i></p>
 </div>
